[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[dependencies]
memmap2 = "0.5.10"
vector = { git = "https://github.com/toastedbreadandomelette/vector-rs", branch = "master" }
